| Bug #37072 | Failed crate table can lead to crash or resource leak | ||
|---|---|---|---|
| Submitted: | 29 May 2008 17:57 | Modified: | 30 May 2008 16:57 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[29 May 2008 17:57]
Jonas Oreland
[29 May 2008 17:58]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/47208 ChangeSet@1.2609, 2008-05-29 17:58:58+02:00, jonas@perch.ndb.mysql.com +14 -0 ndb - bug#37072 table creation failing in tup/acc *may* lead to crash of resource leak
[29 May 2008 18:18]
Bugs System
Pushed into 5.1.23-ndb-6.4.0
[29 May 2008 18:20]
Bugs System
Pushed into 5.1.24-ndb-6.3.15
[29 May 2008 18:21]
Bugs System
Pushed into 5.1.24-ndb-6.2.16
[30 May 2008 16:57]
Jon Stephens
Documented in the 5.1.24-ndb-6.2.16 and 5.1.24-ndb-6.3.15 changelogs as follows:
A failed attempt to create an NDB table could in some cases lead to
resource leaks or cluster failures.
[13 Dec 2008 0:30]
Bugs System
Pushed into 6.0.6-alpha (revid:sp1r-jonas@perch.ndb.mysql.com-20080529155858-22905) (version source revid:jonas@mysql.com-20080808094047-4e1yiarqa2t3opg3) (pib:5)
